Closed Bug 1002890 Opened 10 years ago Closed 10 years ago

Signaling unittests no longer need mainthread check exceptions

Categories

(Core :: WebRTC: Signaling, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: ehugg, Assigned: ehugg)

References

Details

Attachments

(1 file, 1 obsolete file)

There are currently several instances where main thread checks are ifdef'd out by MOZILLA_INTERNAL_API for the benefit of the signaling unittests.  Now that those unittests use the main thread this code should be simplified.
Assignee: nobody → ethanhugg
Depends on: 819549
Attachment #8414174 - Attachment is obsolete: true
Attachment #8414730 - Flags: review?(rjesup)
Comment on attachment 8414730 [details] [diff] [review]
Signaling unittests no longer need exceptions to mainthread checks

Review of attachment 8414730 [details] [diff] [review]:
-----------------------------------------------------------------

Finally!  Thanks
Attachment #8414730 - Flags: review?(rjesup) → review+
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/cfa3ce9b653f
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: