Bug 1002890 - Signaling unittests no longer need exceptions to mainthread checks. r=jesup